fixed image height disproportion and spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@ code {
 
 .card-img-top {
   width: 100%;
-  height: 20vw;
+  height: 250px;
   object-fit: cover;
 }
